# aol

./: .gitignore  6010  CMakeLists.txt  README.md  automaint  autorun  autorun.pl  autotest  circle  config.cache  config.status  logrotate.pl  src.t  syslog  syslog.CRASH
lib/: world.old.tar  world.tar
lib/bak/: plrobjs.MAY-07-2007.tgz  plrobjs.MAY-22-2007.tgz
lib/etc/: DELETED  badsites  board.InChar  board.bug  board.build  board.conclave  board.idea  board.immort  board.mages  board.mort_ooc  board.mortbug  board.news  board.policy  board.rp  board.social  board.trade  hcontrol  players  players.020800  players.051400  players.20000522  players.20000525  players.20000613  players.2006.10.27  players.back.01162016  players.bak2  players.old  players.pwiped  plrmail
lib/house/: 10136.house  19009.house  19010.house  19013.house  19019.house  19020.house  19021.house  19022.house  19025.house  19037.house  19047.house  19050.house  19051.house  19054.house  19057.house  19059.house  19063.house  19064.house  19074.house  19081.house  19083.house  19085.house  2963.house  4471.house  4472.house  4487.house  4488.house  4489.house  4490.house  6932.house
lib/misc/: bugs  bugs.nui  bugs.old  ideas  ideas.old  ideas12.10.2001.old  messages  messages.new  messages.nui  messages.pre-pulse  socials  socials.20000403  socials.old  socials.presing.ziv  socials.ziv  typos  xnames  xplayers
lib/plrobjs/: deleted
lib/text/: background  credits  handbook  handbook.old  imotd  imotd.mission  imotd.mission13008  imotd.old  info  motd  motd.12232015  motd.13008  motd.2162008  motd.911  motd.91103  motd.april102016  motd.back  motd.bak  motd.forpolicy  motd.old  motd.pwipe  motd.tak  motd.tak1  motd.update  (+4 more)
log/: GG  PCKiller  PCKiller.log.1  approvals.log.1  badpws  badpws.log.1  delete  delete.log.1  edits  edits.log.1  godcmds  levels  levels.log.1  maillogs.php  maillogs.sh  multiplay  multiplay.log.1  newplayers  newplayers.log.1  prayer.bak  prayer.full  rentgone  rentgone.log.1  restarts  restarts.log.1  rip  rip.log.1  syslog  syslog.1  syslog.2  syslog.3  syslog.4  syslog.5  syslog.6  syslog.7  syslog.8  syslog.9  syslog.CRASH  usage  valkor  (+1 more)
mail/: saved-messages  sent-mail  sent-mail-apr-2002
public_html/: 1101.html  1150.html  1169.html
src/: .cvsignore  ABC  DG_Changes  Makefile  Makefile.in  Makefile.original  NETSTAT  act.comm.c  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  assemblies.h  autowiz.c  boards.h  bsd-snprintf.c  bsd-snprintf.h  castle.c  clan.c  class.c  color.c  comm.c  comm.h  config.c  constants.c  constants.h  context_help.c  cpbeta  cpbuild  cpprod-classic  db.c  db.h  dg_db_scripts.c  dg_event.c  dg_handler.c  dg_misc.c  dg_objcmd.c  (+62 more)
(+2136 files in other folders)
